Fix stat group outlines not showing in item view

--- a/style/component/inventory/ItemStat.scss
+++ b/style/component/inventory/ItemStat.scss
@@ -55,8 +55,8 @@
 			bottom: calc(100% + 2px);
 			width: 8px;
 			height: 3px;
-			border-top: 1px solid var(--color);
-			border-left: 1px solid var(--color);
+			border-top: 1px solid var(--color, currentColor);
+			border-left: 1px solid var(--color, currentColor);
 		}
 
 		&::after {
@@ -64,8 +64,8 @@
 			top: calc(100% + 2px);
 			width: 8px;
 			height: 30px;
-			border-bottom: 1px solid var(--color);
-			border-left: 1px solid var(--color);
+			border-bottom: 1px solid var(--color, currentColor);
+			border-left: 1px solid var(--color, currentColor);
 		}
 
 		:root:not(.show-extra-info) & {
